--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "ackee",
   "version": "1.0.0",
-  "description": "ackee website - personal portfolio for Ed Stennett",
   "main": "index.js",
-  "directories": {
-    "doc": "doc"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+    "description": "",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
