--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,1 @@
-ErrorDocument 404 http://www.ackeecreative.com/404page.html
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+ErrorDocument 404 http://www.ackeecreative.com/404.html
