--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "author": "",
   "license": "ISC",
-    "description": "",
+  "description": "",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -15,7 +15,7 @@
     "gulp-connect": "^5.0.0",
     "gulp-connect-multi": "^1.0.8",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "file:node_modules/gulp-sass",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
     "gulp-watch": "^4.3.11",
